* FEATURE: Add Special:Move.
* FEATURE: Add jamwiki:linkParam tag, remove jamwiki:encode and
  jamwiki:decode tags.
* BUG: Apostrophes were not being escaped by the parser.
* BUG: <pre> tags might not be closed by the parser.
* BUG: Use of the edit resolve functionality with a section edit could cause
  the resulting edit to splice together too much text.
* FEATURE: Updated German translations from Axel Kramer (axelclk).

0.3.0
=====

* FEATURE: Add support for Mediawiki categories.
* FEATURE: Add Special:Categories.
* FEATURE: Add Special:Manage, remove Special:Delete.
* FEATURE: Add support for undeleting a topic.
* FEATURE: Drop jam_image table - unused.
* BUG: Possible null pointer exception in file persistency mode, pointed
  out by User:garem.
* BUG: Image uploads in file persistency mode set wrong path.
* BUG: Fix possible PageInfo corruption.  Pointed out by Scott Crocco.
* BUG: Upgrade to javadiff 1.0.5 to fix several diff issues.
* BUG: Parser was not parsing links of the form [[#Section]] properly.
* BUG: Parser was not parsing links with parentheses (such as
  [[Ajax (programming)]]) properly.
* BUG: Some file input/output streams not properly closed when in file
  persistency mode.
* BUG: Database upgrade rollback could fail.
* BUG: Software version could be updated even if upgrade unsuccessful.
* BUG: Topic names beginning with "Special:" should not be allowed, but
  topic names containing apostrophes should be allowed.
* FEATURE: Major parser architecture updates.  Parser should be slightly
  faster when parsing edits.
* FEATURE: Fix reloading of recent changes in ANSI database mode.
* FEATURE: Special:AllTopics renamed to Special:Allpages for Mediawiki
  compatibility.
* BUG: Categories and images no longer displayed on Special:Allpages.
* FEATURE: Delete activation.jar - unused.
* FEATURE: Code cleanups including removal of unused files.
* FEATURE: Updated German translations from Axel Kramer (axelclk).